# line-align

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  setup.py.bck
.github/: wheels.yml
.github/workflows/: python-app.yml  wheels.yml
align/: build_char_sub_matrix.py  char_sub_matrix.py
align/cpplib/: line_align.hpp  line_align_py.cpp
align/pylib/: char_sub_matrix.py  const.py
char_matrix/: build_char_sub_matrix.py
char_matrix/cpplib/: line_align.cpp  line_align_py.cpp
line_align/: build_char_sub_matrix.py  char_sub_matrix.py  levenshtein.py
line_align/cpplib/: line_align.cpp
line_align/pylib/: .rendered.line_align_py.cpp  align.py  char_sub_matrix.py  const.py  line_align.cpp
tests/: test_align.py  test_char_sub_matrix.py  test_distance.py  test_distance_all.py
